# scheduling_system

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scheduling_system/: hooks.py
scheduling_system/public/js/: appointment_calendar.js
scheduling_system/scheduling_system/doctype/appointment/: appointment.js  appointment.json  appointment.py  test_appointment.py
